data/nginx/nginx-hostnetwork-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hostnetwork-deployment
  namespace: default
  labels:
    app: nginx-psp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-psp
  template:
    metadata:
      labels:
        app: nginx-psp
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.4
      hostNetwork: true
