data/nginx/nginx-apple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-apple
  name: nginx-apple
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-apple
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-apple
    spec:
      containers:
      - image: nginx:stable-alpine
        name: nginx-apple
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: nginx-apple-volume
      volumes:
      - configMap:
          name: nginx-apple
        name: nginx-apple-volume
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-apple-service
spec:
  selector:
    app: nginx-apple
  ports:
    - port: 80
