data/nginx/nginx-pear.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-pear
  name: nginx-pear
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pear
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-pear
    spec:
      containers:
      - image: nginx:stable-alpine
        name: nginx-pear
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: nginx-pear-volume
      volumes:
      - configMap:
          name: nginx-pear
        name: nginx-pear-volume
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-pear-service
spec:
  selector:
    app: nginx-pear
  ports:
    - port: 80
